--- a/ZhuoKe/src/main/res/layout/layout_zk_sdk_main.xml
+++ b/ZhuoKe/src/main/res/layout/layout_zk_sdk_main.xml
@@ -1,16 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/word"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20sp"
         android:gravity="center"
-        android:text="@string/zk_sdk"/>
+        android:padding="20sp"
+        android:text="@string/zk_sdk" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/screen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawablePadding="4dp"
+            android:drawableTop="@drawable/ic_screen"
+            android:gravity="center"
+            android:padding="4dp"
+            android:text="@string/screen"
+            android:textColor="@android:color/primary_text_light"
+            android:textSize="16sp" />
+    </LinearLayout>
 </LinearLayout>
