--- a/ZhuoKe/src/main/res/layout/layout_zk_sdk_main.xml
+++ b/ZhuoKe/src/main/res/layout/layout_zk_sdk_main.xml
@@ -23,6 +23,7 @@
             android:id="@+id/screen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:drawablePadding="4dp"
             android:drawableTop="@drawable/ic_screen"
             android:gravity="center"
@@ -30,5 +31,6 @@
             android:text="@string/screen"
             android:textColor="@android:color/primary_text_light"
             android:textSize="16sp" />
+
     </LinearLayout>
 </LinearLayout>
