--- a/ZhuoKe/src/main/res/layout/layout_zk_sdk_main.xml
+++ b/ZhuoKe/src/main/res/layout/layout_zk_sdk_main.xml
@@ -2,8 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:background="@color/white_back"
+    android:clipToPadding="true"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
+
+    <!--标题-->
+    <include layout="@layout/widget_toolbar" />
 
     <TextView
         android:id="@+id/word"
