--- a/ZhuoKe/src/main/res/menu/item_register.xml
+++ b/ZhuoKe/src/main/res/menu/item_register.xml
@@ -2,6 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:title="账号申请"
+        android:title="文字"
         app:showAsAction="always" />
 </menu>
