--- a/ZhuoKe/src/main/res/layout/widget_toolbar.xml
+++ b/ZhuoKe/src/main/res/layout/widget_toolbar.xml
@@ -8,8 +8,8 @@
     <android.support.v7.widget.Toolbar
         android:id="@id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="41dp"
-        android:background="@color/white_back"
+        android:layout_height="44dp"
+        android:background="#ffcc4b"
         app:contentInsetStart="0dp"
         app:popupTheme="@style/AppTheme.PopupOverlay">
 
