--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,16 +19,23 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:onClick="showFloatWindow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="showFloatWindow"
         android:text="展示悬浮窗" />
 
     <Button
-        android:onClick="closeFloatWindow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="closeFloatWindow"
         android:text="关闭悬浮窗" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="showNotificationUtil"
+        android:text="通知栏工具Demo" />
+
 
     <team.zhuoke.sdk.component.ZKRecycleView
         android:id="@+id/recyclerView"
