1. 添加某些界面的沉浸效果； 2. 单元测试融空； 3. 升级 com.blankj:utilcodex:1.23.7。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="team.zhuoke.zhuoke_sdk.MainActivity"
-    tools:layout_editor_absoluteY="25dp">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/blue_dark_text"
+              android:fitsSystemWindows="true"
+              android:orientation="vertical"
+              tools:context="team.zhuoke.zhuoke_sdk.MainActivity"
+              tools:layout_editor_absoluteY="25dp">
 
     <Button
         android:id="@+id/button"
@@ -16,30 +18,30 @@
         android:text="启动 ZK SDK 彩蛋页面"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="showFloatWindow"
-        android:text="展示悬浮窗" />
+        android:text="展示悬浮窗"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="closeFloatWindow"
-        android:text="关闭悬浮窗" />
+        android:text="关闭悬浮窗"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="showNotificationUtil"
-        android:text="通知栏工具Demo" />
+        android:text="通知栏工具Demo"/>
 
 
     <team.zhuoke.sdk.component.ZKRecycleView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
