1. 优化 Demo 的包名和显示； 2. 添加网络请求 快捷使用方式； 3. 添加 UrlConfig 和 ZhuoKeApi; 4. 升级为 compileSdkVersion 28； 5. 升级到 AndroidX 包； 6. 添加常用的类库； 7. 升级 gradle 版本为 gradle-5.3.1； 8. 添加 AndroidX 的使用； 9. 升级相关组件； 10. 升级构建的版本号。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
               android:background="@color/blue_dark_text"
               android:fitsSystemWindows="true"
               android:orientation="vertical"
-              tools:context="team.zhuoke.zhuoke_sdk.MainActivity"
+              tools:context="team.zhuoke.zhuoke_sdk.activity.MainActivity"
               tools:layout_editor_absoluteY="25dp">
 
     <Button
@@ -37,6 +37,12 @@
         android:layout_height="wrap_content"
         android:onClick="showNotificationUtil"
         android:text="通知栏工具Demo"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="entryNetworkPage"
+        android:text="进入请求网络页面"/>
 
 
     <team.zhuoke.sdk.component.ZKRecycleView
